[package]
name = "restate-admin-rest-model"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[features]
default = []
schema = ["dep:schemars", "restate-serde-util/schema", "restate-types/schemars"]

[dependencies]
restate-workspace-hack = { workspace = true }

restate-types = { workspace = true }
restate-serde-util = { workspace = true }
restate-time-util = { workspace = true, features = ["serde_with"] }

bytes = { workspace = true }
derive_more = { workspace = true }
http = { workspace = true }
http-serde = { workspace = true }
humantime = { workspace = true }
schemars = { workspace = true, optional = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_with = { workspace = true }
strum = { workspace = true }
