[package]
name = "restate-admin"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[features]
default = ["serve-web-ui"]
clients = []
options_schema = ["restate-service-client/options_schema"]
memory-loglet = ["restate-bifrost/memory-loglet"]
serve-web-ui = ["restate-web-ui", "mime_guess"]
storage-query = []
metadata-api = []
restate-web-ui = ["dep:restate-web-ui"]

[dependencies]
workspace-hack = { version = "0.1", path = "../../workspace-hack" }

restate-admin-rest-model = { workspace = true, features = ["schema"] }
restate-bifrost = { workspace = true, features = ["local-loglet", "replicated-loglet"] }
restate-core = { workspace = true, features = ["options_schema"] }
restate-errors = { workspace = true }
restate-fs-util = { workspace = true }
restate-futures-util = { workspace = true }
restate-service-client = { workspace = true }
restate-service-protocol = { workspace = true, features = ["discovery"] }
restate-storage-query-datafusion = { workspace = true }
restate-types = { workspace = true, features = ["schemars"] }
restate-utoipa = { workspace = true }
restate-wal-protocol = { workspace = true }
restate-web-ui = { git = "https://github.com/restatedev/restate-web-ui-crate", optional = true, version = "0.0.60", tag = "v0.0.60" }

anyhow = { workspace = true }
arc-swap = { workspace = true }
axum = { workspace = true, features = ["json"] }
bytes = { workspace = true }
bytestring = { workspace = true }
codederror = { workspace = true }
datafusion = { workspace = true }
derive_builder = { workspace = true }
derive_more = { workspace = true }
enumset = { workspace = true }
futures = { workspace = true }
http = { workspace = true }
http-body = { workspace = true }
http-body-util = { workspace = true }
hyper-util = { workspace = true }
jsonschema = { workspace = true }
itertools = { workspace = true }
mime_guess = { version = "2.0.5", optional = true }
okapi-operation = { version = "0.3.0-rc3", features = ["axum-integration"] }
parking_lot = { workspace = true }
prost = { workspace = true }
prost-dto = { workspace = true }
prost-types = { workspace = true }
rand = { workspace = true }
restate-serde-util = { workspace = true, features = ["schema"] }
schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_with = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true, features = ["transport", "codegen", "prost", "gzip", "zstd"] }
tower = { workspace = true, features = ["load-shed", "limit"] }
tracing = { workspace = true }
xxhash-rust = { workspace = true }

[dev-dependencies]
restate-bifrost = { workspace = true, features = ["test-util"] }
restate-core = { workspace = true, features = ["test-util"] }
restate-test-util = { workspace = true }
restate-types = { workspace = true, features = ["test-util"] }

googletest = { workspace = true }
tempfile = { workspace = true }
test-log = { workspace = true }
tokio-stream = { workspace = true, features = ["net"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
