[package]
name = "restate-admin"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[features]
default = ["serve-web-ui"]
options_schema = ["restate-service-client/options_schema", "restate-types/schemars"]
serve-web-ui = ["restate-web-ui", "mime_guess"]
metadata-api = []
restate-web-ui = ["dep:restate-web-ui"]
all-metadata-providers = [
    "restate-metadata-providers/replicated",
    "restate-metadata-providers/etcd",
    "restate-metadata-providers/objstore",
    "restate-metadata-providers/dynamodb",
]

[dependencies]
restate-workspace-hack = { workspace = true }

restate-admin-rest-model = { workspace = true, features = ["schema"] }
restate-bifrost = { workspace = true, features = ["local-loglet", "replicated-loglet"] }
restate-core = { workspace = true }
restate-errors = { workspace = true }
restate-ingestion-client = { workspace = true }
restate-metadata-store = { workspace = true }
restate-metadata-providers = { workspace = true }
restate-service-client = { workspace = true }
restate-service-protocol = { workspace = true, features = ["discovery"] }
restate-storage-query-datafusion = { workspace = true }
restate-time-util = { workspace = true }
restate-types = { workspace = true }
restate-wal-protocol = { workspace = true }
restate-web-ui = { git = "https://github.com/restatedev/restate-web-ui-crate", optional = true, version = "0.1.26", tag = "v0.1.26" }

ahash = { workspace = true }
anyhow = { workspace = true }
assert2 = { workspace = true }
axum = { workspace = true, features = ["json", "query"] }
bytes = { workspace = true }
bytesize = { workspace = true }
bytestring = { workspace = true }
codederror = { workspace = true }
datafusion = { workspace = true }
derive_builder = { workspace = true }
derive_more = { workspace = true }
futures = { workspace = true }
http = { workspace = true }
http-body = { workspace = true }
http-body-util = { workspace = true }
hyper-util = { workspace = true }
itertools = { workspace = true }
metrics = { workspace = true }
mime_guess = { version = "2.0.5", optional = true }
parking_lot = { workspace = true }
prost-dto = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_with = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true, features = ["transport", "codegen", "gzip", "zstd"] }
tower = { workspace = true, features = ["load-shed", "limit"] }
tower-http = { workspace = true, features = ["trace"] }
tracing = { workspace = true }
urlencoding = { workspace = true }
utoipa = { workspace = true, features = ["axum_extras"] }
utoipa-axum = { workspace = true }

[dev-dependencies]
restate-bifrost = { workspace = true, features = ["test-util"] }
restate-core = { workspace = true, features = ["test-util"] }
restate-types = { workspace = true, features = ["test-util"] }

googletest = { workspace = true }
test-log = { workspace = true }
tracing = { workspace = true }

[lints]
workspace = true
