[package]
name = "restate-benchmarks"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[features]
default = []
frame-pointer = ["pprof/frame-pointer"]

[dependencies]
restate-core = { workspace = true }
restate-node = { workspace = true }
restate-server = { workspace = true }
restate-types = { workspace = true, features = ["clap"] }

anyhow = { workspace = true }
arc-swap = { workspace = true }
drain = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }
hyper = { workspace = true, features = ["client"] }
pprof = { version = "0.12", features = ["criterion", "flamegraph"] }
serde_json = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
criterion = { workspace = true, features = ["async_tokio"] }
rand = { workspace = true }

[build-dependencies]

[[bench]]
name = "throughput_parallel"
harness = false

[[bench]]
name = "throughput_sequential"
harness = false
