[package]
name = "restate-clock"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[features]
default = []
hlc = []
test-util = []

[dependencies]
restate-workspace-hack = { workspace = true }
restate-encoding = { workspace = true }

bilrost = { workspace = true }
bytes = { workspace = true }
jiff = { workspace = true, optional = true }
prost-types = { workspace = true, optional = true }
schemars = { workspace = true, optional = true }
serde = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
restate-clock = {path = ".", default-features = false, features = ["test-util", "hlc"]}

criterion = { workspace = true }
serde_json = { workspace = true }

[[bench]]
name = "wall_clock"
harness = false

[[bench]]
name = "hlc_clock"
harness = false
required-features = ["hlc"]

[[example]]
name = "brrr_single"
required-features = ["hlc"]

[[example]]
name = "brrr_multi"
required-features = ["hlc"]
