[package]
name = "restate-cloud-tunnel-client"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[features]
default = []

[dependencies]
restate-workspace-hack = { workspace = true }

anyhow = { workspace = true }
bs58 = { version = "0.5.0" }
bytes = { workspace = true }
http = { workspace = true }
http-body-util = { workspace = true }
hyper = { workspace = true, features = ["server"]}
hyper-rustls = { workspace = true }
hyper-util = { workspace = true }
jsonwebtoken = { version = "9.1.0" }
rustls = { workspace = true, features = ["aws-lc-rs"]}
serde = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tower = { workspace = true }
tracing = { workspace = true }